# ctap-fido2

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: checks.yml  release.yml
src/: cbor.rs  cose.rs  device.rs  error.rs  hid.rs  lib.rs  pin.rs
src/cmd/: get_assertion.rs  get_info.rs  get_next_assertion.rs  make_credential.rs  mod.rs  reset.rs
tests/: cose.rs  primitives.rs
