[package]
name         = "ctap-fido2"
version      = "0.1.0"
authors      = [ "Amaan Qureshi <contact@amaanq.com>" ]
edition      = "2024"
rust-version = "1.95.0"
description  = "CTAP2 client for FIDO2 over USB HID with hmac-secret support."
license      = "MIT"
repository   = "https://github.com/amaanq/ctap-fido2"
readme       = "README.md"
keywords     = [ "ctap", "ctap2", "fido2", "hmac-secret", "webauthn" ]
categories   = [ "authentication", "cryptography", "hardware-support" ]

[dependencies]
aes           = "0.9.0"
base64        = "0.22.1"
ciborium      = "0.2.2"
ed25519-dalek = { default-features = false, version = "2.2.0" }
hidapi        = "2.6.6"
hmac-sha256   = "1.1.14"
log           = "0.4"
p256          = { features = [ "ecdh", "ecdsa" ], version = "0.13.2" }
rand          = "0.10.1"
subtle        = "2.6.1"
zeroize       = { features = [ "derive" ], version = "1.8.2" }

[dev-dependencies]
hex = "0.4.3"

[profile.release]
lto   = "thin"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

blanket_clippy_restriction_lints = "allow"
restriction                      = { level = "warn", priority = -1 }

alloc_instead_of_core             = "allow"
allow_attributes_without_reason   = "allow"
arbitrary_source_item_ordering    = "allow"
arithmetic_side_effects           = "allow"
as_conversions                    = "allow"
as_pointer_underscore             = "allow"
as_underscore                     = "allow"
big_endian_bytes                  = "allow"
clone_on_ref_ptr                  = "allow"
dbg_macro                         = "allow"
default_numeric_fallback          = "allow"
disallowed_script_idents          = "allow"
else_if_without_else              = "allow"
error_impl_error                  = "allow"
exhaustive_enums                  = "allow"
exhaustive_structs                = "allow"
expect_used                       = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic                  = "allow"
host_endian_bytes                 = "allow"
impl_trait_in_params              = "allow"
implicit_return                   = "allow"
indexing_slicing                  = "allow"
inline_asm_x86_intel_syntax       = "allow"
inline_modules                    = "allow"
integer_division                  = "allow"
integer_division_remainder_used   = "allow"
large_include_file                = "allow"
let_underscore_must_use           = "allow"
let_underscore_untyped            = "allow"
little_endian_bytes               = "allow"
map_err_ignore                    = "allow"
match_same_arms                   = "allow"
missing_assert_message            = "allow"
missing_asserts_for_indexing      = "allow"
missing_docs_in_private_items     = "allow"
missing_inline_in_public_items    = "allow"
missing_trait_methods             = "allow"
mod_module_files                  = "allow"
module_name_repetitions           = "allow"
multiple_crate_versions           = "allow"
multiple_inherent_impl            = "allow"
mutex_atomic                      = "allow"
mutex_integer                     = "allow"
needless_borrowed_reference       = "allow"
new_without_default               = "allow"
non_ascii_literal                 = "allow"
panic                             = "allow"
panic_in_result_fn                = "allow"
partial_pub_fields                = "allow"
print_stderr                      = "allow"
print_stdout                      = "allow"
pub_use                           = "allow"
pub_with_shorthand                = "allow"
pub_without_shorthand             = "allow"
question_mark_used                = "allow"
ref_patterns                      = "allow"
renamed_function_params           = "allow"
same_name_method                  = "allow"
semicolon_outside_block           = "allow"
separated_literal_suffix          = "allow"
shadow_reuse                      = "allow"
shadow_same                       = "allow"
shadow_unrelated                  = "allow"
single_call_fn                    = "allow"
single_char_lifetime_names        = "allow"
single_match_else                 = "allow"
std_instead_of_alloc              = "allow"
std_instead_of_core               = "allow"
string_add                        = "allow"
string_slice                      = "allow"
tests_outside_test_module         = "allow"
todo                              = "allow"
too_many_lines                    = "allow"
try_err                           = "allow"
unimplemented                     = "allow"
unnecessary_safety_comment        = "allow"
unnecessary_safety_doc            = "allow"
unreachable                       = "allow"
unwrap_in_result                  = "allow"
unwrap_used                       = "allow"
use_debug                         = "allow"
wildcard_enum_match_arm           = "allow"
